--- a/features/onboarding/presentation/src/main/res/values/strings.xml
+++ b/features/onboarding/presentation/src/main/res/values/strings.xml
@@ -35,5 +35,7 @@
     <string name="name_hint">Your name</string>
 
     <string name="gender_text">We strive to create a comfortable environment\nfor members of all gender identities</string>
+
+    <string name="age_title">How old are you?</string>
     <string name="age_text">,\ enter the date of birth, and we will calculate your personal content!</string>
 </resources>
