--- a/features/onboarding/presentation/src/main/res/values/strings.xml
+++ b/features/onboarding/presentation/src/main/res/values/strings.xml
@@ -61,4 +61,12 @@
 
     <string name="goals_title">What are your main goals?</string>
     <string name="goals_text">, tell us what you main goals for you?</string>
+
+    <string name="profile_settings_title">Personalize your profile</string>
+    <string name="profile_settings_text">It\'s just a little bit more</string>
+
+    <string name="profile_settings_point_1">Profile settings</string>
+    <string name="profile_settings_point_2">Creating a natal chart</string>
+    <string name="profile_settings_point_3">Personalized tips</string>
+    <string name="profile_settings_point_4">Lunar phases</string>
 </resources>
