--- a/features/feed/presentation/src/main/res/values/strings.xml
+++ b/features/feed/presentation/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="lunar_eclipse">Lunar Eclipse</string>
     <string name="solar_eclipse">Solar Eclipse</string>
 
+    <string name="slider_title">Waning Crescent</string>
+
 </resources>
