--- a/features/feed/presentation/src/main/res/values/strings.xml
+++ b/features/feed/presentation/src/main/res/values/strings.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--  Header  -->
     <string name="new_moon">New Moon</string>
     <string name="full_moon">Full Moon</string>
-
     <string name="lunar_eclipse">Lunar Eclipse</string>
     <string name="solar_eclipse">Solar Eclipse</string>
-
     <string name="slider_title">Waning Crescent</string>
+    <!--  Header  -->
 
+    <!--  Titles  -->
+    <string name="moon_insight">Moon Insight</string>
+    <string name="quote_for_today">Quote for Today</string>
+    <string name="moon_tips">Moon Tips</string>
+    <string name="your_daily_tip">Your Daily Tip</string>
+    <string name="affirmation">Affirmation</string>
+    <string name="signs_of_the_day">Signs of the day</string>
+    <!--  Titles  -->
+
+    <!--  Moon Insight  -->
+    <string name="moon_day">Moon Day</string>
+    <string name="moon_sign">Moon Sign</string>
+    <string name="moon_phase">Moon Phase</string>
+    <!--  Moon Insight  -->
 </resources>
