--- a/features/compatibility/presentation/src/main/res/values/strings.xml
+++ b/features/compatibility/presentation/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="empty_button">Test Compatibility</string>
 
     <string name="details_title">Overview</string>
+    <string name="details_subtitle">Your harmony score</string>
 </resources>
