--- a/core/compose/src/main/res/values/strings.xml
+++ b/core/compose/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Moonila</string>
+    <string name="app_name">Moonlia</string>
     <string name="continue_btn">Continue</string>
 
 </resources>
