--- a/core/compose/src/main/res/values/strings.xml
+++ b/core/compose/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="app_name">Moonlia</string>
     <string name="continue_btn">Continue</string>
-
+    <string name="save_btn">Save</string>
 </resources>
