--- a/features/compatibility/presentation/src/main/res/values/strings.xml
+++ b/features/compatibility/presentation/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="create_name_hint">Enter name</string>
     <string name="create_gender_hint">Gender</string>
     <string name="create_date_hint">Date of birth</string>
+    
+    <string name="gender_male">Male</string>
+    <string name="gender_female">Female</string>
+    <string name="gender_other">Non-binary</string>
 </resources>
