--- a/features/profile/presentation/src/main/res/values/strings.xml
+++ b/features/profile/presentation/src/main/res/values/strings.xml
@@ -6,4 +6,19 @@
     <string name="anonymous_btn">Sign In</string>
 
     <string name="edit_profile">Edit profile</string>
+
+    <string name="settings_title">Settings</string>
+
+    <string name="restore_purchase">Restore Purchase</string>
+    <string name="feedback">Feedback</string>
+    <string name="rate_us">Rate Us</string>
+    <string name="how_it_works">How it works</string>
+    <string name="term_of_service">Term of Service</string>
+    <string name="privacy_policy">Privacy Policy</string>
+
+    <string name="notifications_title">Daily notifications</string>
+    <string name="calendar_notification">Calendar</string>
+    <string name="affirmations_notification">Affirmations</string>
+    <string name="tip_notification">Tip of the Day</string>
+    <string name="notification_not_set">Not set</string>
 </resources>
