--- a/features/profile/presentation/src/main/res/values/strings.xml
+++ b/features/profile/presentation/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="affirmations_notification">Affirmations</string>
     <string name="tip_notification">Tip of the Day</string>
     <string name="notification_not_set">Not set</string>
+    <string name="notification_submit">Set Up</string>
 </resources>
